Update docker and n8n config settings. Add ngrok for url tunneling

--- a/.env
+++ b/.env
@@ -4,3 +4,10 @@ POSTGRES_DB=n8n
 
 N8N_ENCRYPTION_KEY=super-secret-key
 N8N_USER_MANAGEMENT_JWT_SECRET=even-more-secret
+
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+LANGCHAIN_TRACING_V2= true
+LANGCHAIN_API_KEY=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
+LANGCHAIN_PROJECT="n8n_local_sandbox"
+
+WEBHOOK_URL="https://34c1-47-186-195-111.ngrok-free.app"
