--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,13 @@ x-n8n: &service-n8n
     - N8N_PERSONALIZATION_ENABLED=false
     - N8N_ENCRYPTION_KEY
     - N8N_USER_MANAGEMENT_JWT_SECRET
+    - LANGCHAIN_ENDPOINT
+    - LANGCHAIN_TRACING_V2
+    - LANGCHAIN_API_KEY
+    - LANGCHAIN_PROJECT
+    - WEBHOOK_URL
+    - NODE_FUNCTION_ALLOW_BUILTIN=*
+    - NODE_FUNCTION_ALLOW_EXTERNAL=*
   links:
     - postgres
 
